# minmind_llama_cpp

./: CMakeLists.txt  README.md
apps/: minmind_cli.cpp  minmind_dataset_review_queue.json  minmind_mcp_tools.json  minmind_semantic_acquisition_manifest.json  minmind_semantic_source_catalog.json  minmind_training_audit_registry.json  minmind_training_profiles.json
include/minmind/: checkpoint.hpp  config.hpp  dataset.hpp  kg.hpp  math.hpp  model.hpp  sampling.hpp  tensor.hpp  tokenizer.hpp  trainer.hpp
scripts/: generate_minimind_golden.py
src/: checkpoint.cpp  config.cpp  dataset.cpp  kg.cpp  math.cpp  model.cpp  sampling.cpp  tokenizer.cpp  trainer.cpp
testdata/golden/: phase0_attention.json  phase0_block.json  phase0_causallm.json  phase0_ffn.json  phase0_forward.json  phase0_loss.json  phase0_rmsnorm.json  phase0_rope.json  phase0_token_ids.json
testdata/kg/: tiny_kg.tsv  tiny_kg_named.tsv
testdata/train/: pipeline_config_byte.json  pipeline_config_byte_json.json  prepare_config_byte.json  tiny_lm.jsonl  tiny_lm_vocab6.jsonl  train_config_vocab6.json
tests/: attention_tests.cpp  block_tests.cpp  causallm_tests.cpp  config_tests.cpp  dataset_tests.cpp  ffn_tests.cpp  generation_tests.cpp  golden_fixture_tests.cpp  golden_forward_tests.cpp  golden_loader.cpp  golden_loader.hpp  kg_tests.cpp  loss_tests.cpp  mcp_manifest_tests.cpp  model_forward_tests.cpp  rmsnorm_tests.cpp  rope_tests.cpp  test_assert.hpp  test_main.cpp  tokenizer_tests.cpp
